--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.4.10",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
+    "locomotive-scroll": "^4.1.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.6",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/locomotive-scroll": "^4.1.4",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
