--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^4.1.3",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.10",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +32,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -51,7 +52,7 @@
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/locomotive-scroll": "^4.1.4",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.18.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
