--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
+    "next": "16.0.2",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
